[gd_scene load_steps=17 format=3 uid="uid://b88n08x7uxvvq"]

[ext_resource type="Script" path="res://Gravity Object/CameraPivot.gd" id="1_1bnp1"]
[ext_resource type="Script" path="res://Gravity Object/GravityObject.gd" id="2_0vp48"]
[ext_resource type="PackedScene" uid="uid://dksa8p1sbkj5j" path="res://Corpos/sol.tscn" id="2_4wllg"]
[ext_resource type="PackedScene" uid="uid://c8yyn6e5cc28d" path="res://Corpos/planeta1.tscn" id="4_sg6rf"]
[ext_resource type="Material" uid="uid://be7um6c7rbo36" path="res://media/ballShader.tres" id="5_3bp6y"]
[ext_resource type="Texture2D" uid="uid://cafjpri876dco" path="res://media/SpaceSkyMap.png" id="6_o0ge0"]
[ext_resource type="Texture2D" uid="uid://u816heplxqi4" path="res://UI_source/minecraft_toolbar.png" id="7_b371w"]
[ext_resource type="Texture2D" uid="uid://dodcvc066alkq" path="res://UI_source/jupiter.png" id="8_7j1cw"]
[ext_resource type="Script" path="res://UI_source/DragNDropTest.gd" id="9_3gnc7"]
[ext_resource type="Script" path="res://Gravity Object/AnalyticPause.gd" id="10_w81p2"]
[ext_resource type="PackedScene" uid="uid://cpomwl56g8js4" path="res://SaveAndLoad/SaveAndLoad.tscn" id="11_1rkaj"]

[sub_resource type="SphereMesh" id="SphereMesh_1vphk"]
material = ExtResource("5_3bp6y")

[sub_resource type="SphereShape3D" id="SphereShape3D_c0nvr"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_vcrrc"]
panorama = ExtResource("6_o0ge0")
filter = false

[sub_resource type="Sky" id="Sky_wiiuw"]
sky_material = SubResource("PanoramaSkyMaterial_vcrrc")

[sub_resource type="Environment" id="Environment_4foyh"]
background_mode = 2
background_energy_multiplier = 0.3
sky = SubResource("Sky_wiiuw")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.04

[node name="Node3D" type="Node3D"]

[node name="CameraPivot" type="Node3D" parent="."]
process_mode = 3
script = ExtResource("1_1bnp1")

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50)

[node name="GravityObject" parent="." instance=ExtResource("2_4wllg")]
mass = 100.0

[node name="GravityObject2" parent="." instance=ExtResource("4_sg6rf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.6721, 0, 0)
mass = 0.1
linear_velocity = Vector3(0, 2.5, 0)

[node name="GravityObject3" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.135681, 0, 23.6968)
mass = 0.01
linear_velocity = Vector3(2.5, -1, 0)
script = ExtResource("2_0vp48")

[node name="MeshInstance3D" type="MeshInstance3D" parent="GravityObject3"]
mesh = SubResource("SphereMesh_1vphk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GravityObject3"]
shape = SubResource("SphereShape3D_c0nvr")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4foyh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Interface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MineToolbar" type="TextureRect" parent="CanvasLayer/Interface"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -344.0
offset_top = -94.0
offset_right = 351.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("7_b371w")

[node name="DragNDropTest" type="TextureRect" parent="CanvasLayer/Interface/MineToolbar"]
layout_mode = 1
anchors_preset = -1
offset_left = 105.0
offset_top = 12.0
offset_right = 155.0
offset_bottom = 62.0
texture = ExtResource("8_7j1cw")
expand_mode = 1
script = ExtResource("9_3gnc7")

[node name="AnalyticPause" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_w81p2")

[node name="Pause Button" type="Button" parent="CanvasLayer/AnalyticPause"]
layout_mode = 0
offset_left = 1056.0
offset_top = 17.0
offset_right = 1111.0
offset_bottom = 48.0
text = "Pause"

[node name="SaveAndLoad" parent="CanvasLayer" instance=ExtResource("11_1rkaj")]

[connection signal="mouse_entered" from="CanvasLayer/Interface/MineToolbar/DragNDropTest" to="CanvasLayer/Interface/MineToolbar/DragNDropTest" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Interface/MineToolbar/DragNDropTest" to="CanvasLayer/Interface/MineToolbar/DragNDropTest" method="_on_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/AnalyticPause/Pause Button" to="CanvasLayer/AnalyticPause" method="_on_pause_button_pressed"]
